Add some version properties for use with fb_dependencyHealth
SVN r65876 |2020-09-17 03:04:16 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 #moduleSet=all
 #moduleSet=consolidation
 #ideaIncludeAllModules=true
+#org.gradle.vfs.watch=true
 # comment out or use --no-parallel to turn off parallel execution
 org.gradle.parallel=true
 # comment out and Gradle will attempt to determine the optimal number of executor threads to use
@@ -146,6 +147,8 @@ gwtServletVersion=2.8.2
 # For dev builds, the targeted, single permutation browser. Can be either gwt-user-firefox, gwt-user-chrome, or gwt-user-ie
 gwtBrowser=gwt-user-chrome
 
+hamcrestCoreVersion=1.3
+
 # Note: if changing this, we might need to match with the picard version in the SequenceAnalysis module build.gradle
 # It is also necessary to update SequenceAnalysisManager.htsjdkVersion
 htsjdkVersion=2.21.3
@@ -168,6 +171,8 @@ javaMailVersion=1.6.5
 jaxbVersion=2.3.0
 
 jaxrpcVersion=1.1
+
+jcommonVersion=1.0.17
 
 jfreechartVersion=1.0.14
 
