--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,8 @@ server/testAutomation/
 !server/modules/build.gradle
 
 # Ignore parts of the .idea dir
-.idea/libraries
-.idea/modules
+.idea/libraries/
+.idea/modules/
 .idea/.gitignore
 .idea/jarRepositories.xml
 .idea/modules.xml
