Use consistent versions across modules for Commons Collections 4 and Google Protocol Buffers

--- a/gradle.properties
+++ b/gradle.properties
@@ -134,6 +134,7 @@ googleApiServicesCalendarVersion=v3-rev255-1.23.0
 googleApiClientVersion=1.23.0
 googleHttpClientVersion=1.23.0
 googleOauthClientVersion=1.23.0
+googleProtocolBufVersion=3.12.2
 
 graalVersion=20.0.0
 
