Enable build caching with new gradle plugin release

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,12 @@
 #moduleSet=all
 #moduleSet=consolidation
 #ideaIncludeAllModules=true
-#org.gradle.vfs.watch=true
+# Uncomment the following line to turn on Gradle's file watching, which may improve efficiency
+# https://blog.gradle.org/introducing-file-system-watching
+org.gradle.vfs.watch=true
+# Uncomment the following line to turn on Gradle's build cache, which will improve efficiency
+# https://docs.gradle.org/current/userguide/build_cache.html
+org.gradle.caching=true
 # comment out or use --no-parallel to turn off parallel execution
 org.gradle.parallel=true
 # comment out and Gradle will attempt to determine the optimal number of executor threads to use
@@ -45,7 +50,7 @@ windowsProteomicsBinariesVersion=1.0
 bintrayPluginVersion=1.8.4
 artifactoryPluginVersion=4.13.0
 gradleNodePluginVersion=2.2.4
-gradlePluginsVersion=1.20.0
+gradlePluginsVersion=1.21.0-buildCache-SNAPSHOT
 owaspDependencyCheckPluginVersion=5.2.1
 versioningPluginVersion=1.0.2
 
