--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@
 org.gradle.vfs.watch=true
 # Uncomment the following line to turn on Gradle's build cache, which will improve efficiency
 # https://docs.gradle.org/current/userguide/build_cache.html
-org.gradle.caching=true
+#org.gradle.caching=true
 # comment out or use --no-parallel to turn off parallel execution
-org.gradle.parallel=true
+#org.gradle.parallel=true
 # comment out and Gradle will attempt to determine the optimal number of executor threads to use
 # (this could be memory-intensive)
 org.gradle.workers.max=3
