--- a/gradle.properties
+++ b/gradle.properties
@@ -50,7 +50,7 @@ windowsProteomicsBinariesVersion=1.0
 bintrayPluginVersion=1.8.4
 artifactoryPluginVersion=4.13.0
 gradleNodePluginVersion=2.2.4
-gradlePluginsVersion=1.22.0-pickDbForTC-SNAPSHOT
+gradlePluginsVersion=1.21.1
 owaspDependencyCheckPluginVersion=5.2.1
 versioningPluginVersion=1.0.2
 
