Update to non-snapshot plugin release

--- a/gradle.properties
+++ b/gradle.properties
@@ -45,7 +45,7 @@ windowsProteomicsBinariesVersion=1.0
 bintrayPluginVersion=1.8.4
 artifactoryPluginVersion=4.13.0
 gradleNodePluginVersion=2.2.4
-gradlePluginsVersion=1.21.2-SNAPSHOT
+gradlePluginsVersion=1.21.2
 owaspDependencyCheckPluginVersion=5.2.1
 versioningPluginVersion=1.1.0
 
