--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,35 @@
 
+pluginManagement {
+    repositories {
+        maven {
+            url "${artifactory_contextUrl}/plugins-release"
+        }
+        if (gradlePluginsVersion.contains("SNAPSHOT") || versioningPluginVersion.contains("SNAPSHOT")) {
+            maven {
+                url "${artifactory_contextUrl}/plugins-snapshot-local"
+            }
+        }
+    }
+    plugins {
+        id 'org.labkey.build.antlr' version "${gradlePluginsVersion}" apply false
+        id 'org.labkey.build.api' version "${gradlePluginsVersion}" apply false
+        id 'org.labkey.build.base' version "${gradlePluginsVersion}" apply false
+        id 'org.labkey.build.distribution' version "${gradlePluginsVersion}" apply false
+        id 'org.labkey.build.fileModule' version "${gradlePluginsVersion}" apply false
+        id 'org.labkey.build.javaModule' version "${gradlePluginsVersion}" apply false
+        id 'org.labkey.build.jsdoc' version "${gradlePluginsVersion}" apply false
+        id 'org.labkey.build.module' version "${gradlePluginsVersion}" apply false
+        id 'org.labkey.build.multiGit' version "${gradlePluginsVersion}" apply false
+        id 'org.labkey.build.npmRun' version "${gradlePluginsVersion}" apply false
+        id 'org.labkey.build.serverDeploy' version "${gradlePluginsVersion}" apply false
+        id 'org.labkey.build.teamCity' version "${gradlePluginsVersion}" apply false
+        id 'org.labkey.build.testRunner' version "${gradlePluginsVersion}" apply false
+        id 'org.labkey.build.tomcat' version "${gradlePluginsVersion}" apply false
+        id 'org.labkey.build.xsddoc' version "${gradlePluginsVersion}" apply false
+        id 'org.labkey.versioning' version "${versioningPluginVersion}" apply false
+    }
+}
+
 buildscript {
     repositories {
         maven {
