--- a/server/embedded/build.gradle
+++ b/server/embedded/build.gradle
@@ -7,6 +7,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.8.RELEASE' apply false
 }
 
+apply plugin: 'java'
 apply plugin: 'io.spring.dependency-management'
 
 sourceSets {
@@ -17,15 +18,8 @@ sourceSets {
     }
 }
 
-
-dependencyManagement {
-    imports {
-        mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
-    }
-}
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:2.4.0'
-//    implementation platform(SpringBootPlugin.BOM_COORDINATES)
     implementation "org.apache.tomcat.embed:tomcat-embed-core:9.0.34"
 
     runtimeOnly 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.34'
@@ -33,6 +27,8 @@ dependencies {
     runtimeOnly group: 'com.sun.mail', name: 'javax.mail', version: '1.6.0'
     runtimeOnly group: 'org.apache.tomcat', name: 'tomcat-dbcp', version: '9.0.37'
     runtimeOnly "org.postgresql:postgresql:42.2.14"
+
+    developmentOnly("org.springframework.boot:spring-boot-devtools")
 }
 
 BuildUtils.addLabKeyDependency(project: project, config: "implementation", depProjectPath: BuildUtils.getBootstrapProjectPath(gradle))
