--- a/server/embedded/config/application.properties
+++ b/server/embedded/config/application.properties
@@ -1,6 +1,7 @@
 server.port=8081
 labkey.driverClassName=org.postgresql.Driver
-labkey.url=jdbc:postgresql://localhost:5432/lk5
+labkey.url=jdbc:postgresql://localhost:5432/embeddedLK
 labkey.username=labkey
 labkey.password=labkey
 labkey.masterEncryptionKey=defaultKey
+labkey.webAppLocation=/Users/ankurjuneja/labkey/server/build/deploy/labkeyWebapp
