--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 build/
 enlistment.properties
 server/config.properties
+server/embedded/config/application.properties
 
 # Ignore other common repository locations
 dist/
