Handle support for smtp config

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -5,3 +5,6 @@ labkey.username=@@jdbcUser@@
 labkey.password=@@jdbcPassword@@
 labkey.masterEncryptionKey=@@masterEncryptionKey@@
 labkey.webAppLocation=/path/to/server/build/deploy/labkeyWebapp
+mail.smtpHost=@@smtpHost@@
+mail.smtpPort=@@smtpPort@@
+mail.smtpUser=@@smtpUser@@
