--- a/gradle.properties
+++ b/gradle.properties
@@ -257,3 +257,6 @@ xercesImplVersion=2.11.0
 xmlApisVersion=1.0.b2
 
 xmlbeansVersion=3.0.1
+
+# set this to true for running the application on embedded tomcat
+useEmbeddedTomcat=true
