--- a/settings.gradle
+++ b/settings.gradle
@@ -74,8 +74,10 @@ import org.labkey.gradle.util.BuildUtils
   node in the tree with these leaves (e.g., 'server:modules:core' will create projects for ":server"
   ":server:modules" and ":server:modules:core").
  */
-
-include ":server:embedded"
+if (hasProperty("useEmbeddedTomcat") && getProperty("useEmbeddedTomcat") == "true")
+{
+    include ":server:embedded"
+}
 
 if (new File(getRootDir(), BuildUtils.convertPathToRelativeDir(BuildUtils.getPlatformProjectPath(gradle))).exists()
         && !hasProperty('excludeBaseModules'))
