--- a/server/embedded/build.gradle
+++ b/server/embedded/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     implementation "org.apache.tomcat.embed:tomcat-embed-core:9.0.34"
 
     runtimeOnly 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.34'
-    runtimeOnly 'javax.mail:javax.mail-api'
+    runtimeOnly 'javax.mail:javax.mail-api:1.6.2'
     runtimeOnly group: 'com.sun.mail', name: 'javax.mail', version: '1.6.0'
     runtimeOnly group: 'org.apache.tomcat', name: 'tomcat-dbcp', version: '9.0.37'
     runtimeOnly "org.postgresql:postgresql:42.2.14"
