Update property so it does not need a value

--- a/gradle.properties
+++ b/gradle.properties
@@ -258,5 +258,5 @@ xmlApisVersion=1.0.b2
 
 xmlbeansVersion=3.0.1
 
-# set this to true for running the application on embedded tomcat
-useEmbeddedTomcat=true
+# uncomment the following line for running the application with embedded tomcat
+#useEmbeddedTomcat
