--- a/server/build.gradle
+++ b/server/build.gradle
@@ -16,13 +16,13 @@ plugins {
     id 'org.labkey.build.database'
 }
 
-if (hasProperty("useEmbeddedTomcat") && getProperty("useEmbeddedTomcat") == "false")
+if (!BuildUtils.useEmbeddedTomcat())
 {
     BuildUtils.addLabKeyDependency(project: project, config: 'tomcatJars', depProjectPath: BuildUtils.getBootstrapProjectPath(gradle)/*, depProjectConfig: 'runTimeElements'*/)
 }
 dependencies
         {
-            if (hasProperty("useEmbeddedTomcat") && getProperty("useEmbeddedTomcat") == "false")
+            if (!BuildUtils.useEmbeddedTomcat())
             {
                 tomcatJars  "com.sun.mail:jakarta.mail:${javaMailVersion}"
                 tomcatJars  "com.sun.activation:jakarta.activation:${activationVersion}" // JavaMail dependency (starting with Java 10), so it must be copied to <tomcat>/lib
