--- a/settings.gradle
+++ b/settings.gradle
@@ -74,7 +74,7 @@ import org.labkey.gradle.util.BuildUtils
   node in the tree with these leaves (e.g., 'server:modules:core' will create projects for ":server"
   ":server:modules" and ":server:modules:core").
  */
-if (hasProperty("useEmbeddedTomcat") && getProperty("useEmbeddedTomcat") == "true")
+if (hasProperty("useEmbeddedTomcat"))
 {
     include ":server:embedded"
 }
