handle multiple data sources

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -1,10 +1,15 @@
 server.port=8081
-labkey.driverClassName=@@jdbcDriverClassName@@
-labkey.url=@@jdbcURL@@
-labkey.username=@@jdbcUser@@
-labkey.password=@@jdbcPassword@@
+
+labkey.dataSourceName[0]=jdbc/labkeyDataSource
+labkey.driverClassName[0]=@@jdbcDriverClassName@@
+labkey.url[0]=@@jdbcURL@@
+labkey.username[0]=@@jdbcUser@@
+labkey.password[0]=@@jdbcPassword@@
+
 labkey.masterEncryptionKey=@@masterEncryptionKey@@
 labkey.webAppLocation=/path/to/server/build/deploy/labkeyWebapp
+
 mail.smtpHost=@@smtpHost@@
 mail.smtpPort=@@smtpPort@@
 mail.smtpUser=@@smtpUser@@
+spring.devtools.restart.additional-paths=/path/to/labkey/server/build/deploy/modules/**
