--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -7,7 +7,7 @@ labkey.username[0]=@@jdbcUser@@
 labkey.password[0]=@@jdbcPassword@@
 
 labkey.masterEncryptionKey=@@masterEncryptionKey@@
-labkey.webAppLocation=/path/to/server/build/deploy/labkeyWebapp
+labkey.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
 
 mail.smtpHost=@@smtpHost@@
 mail.smtpPort=@@smtpPort@@
