extract distribution zip

--- a/gradle.properties
+++ b/gradle.properties
@@ -84,7 +84,7 @@ activationVersion=1.2.1
 
 annotationsVersion=15.0
 
-apacheTomcatVersion=8.5.51
+apacheTomcatVersion=9.0.34
 
 #Unifying version used by DISCVR and Premium
 apacheDirectoryVersion=1.0.3
@@ -259,4 +259,4 @@ xmlApisVersion=1.0.b2
 xmlbeansVersion=3.0.1
 
 # uncomment the following line for running the application with embedded tomcat
-#useEmbeddedTomcat
+useEmbeddedTomcat
