--- a/server/embedded/build.gradle
+++ b/server/embedded/build.gradle
@@ -20,7 +20,9 @@ sourceSets {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:2.4.0'
-    implementation "org.apache.tomcat.embed:tomcat-embed-core:9.0.34"
+    implementation 'org.apache.tomcat.embed:tomcat-embed-core:9.0.34'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 
     runtimeOnly 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.34'
     runtimeOnly 'javax.mail:javax.mail-api:1.6.2'
