code review feedback changes

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -1,15 +1,21 @@
-server.port=8081
+server.port=8080
 
-labkey.dataSourceName[0]=jdbc/labkeyDataSource
-labkey.driverClassName[0]=@@jdbcDriverClassName@@
-labkey.url[0]=@@jdbcURL@@
-labkey.username[0]=@@jdbcUser@@
-labkey.password[0]=@@jdbcPassword@@
+labkeyDataSource.dataSourceName[0]=jdbc/labkeyDataSource
+labkeyDataSource.driverClassName[0]=@@jdbcDriverClassName@@
+labkeyDataSource.url[0]=@@jdbcURL@@
+labkeyDataSource.username[0]=@@jdbcUser@@
+labkeyDataSource.password[0]=@@jdbcPassword@@
 
-labkey.masterEncryptionKey=@@masterEncryptionKey@@
-labkey.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
+context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
+context.masterEncryptionKey=@@masterEncryptionKey@@
 
 mail.smtpHost=@@smtpHost@@
 mail.smtpPort=@@smtpPort@@
 mail.smtpUser=@@smtpUser@@
-spring.devtools.restart.additional-paths=/path/to/labkey/server/build/deploy/modules/**
+# mail.smtpFrom=@@smtpFrom@@
+# mail.smtpPassword=@@smtpPassword@@
+# mail.startTlsEnable=@@smtpStartTlsEnable@@
+# mail.smtpSocketFactoryClass=@@smtpSocketFactoryClass@@
+# mail.smtpAuth=@@smtpAuth@@
+
+spring.devtools.restart.additional-paths=@@pathToServer@@/server/build/deploy/modules/**
