support for https

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -1,4 +1,16 @@
-server.port=8080
+# server.port=8080
+
+## To switch to http, uncomment above server config and comment
+## below server config
+
+server.port=8443
+server.ssl.enabled=true
+server.ssl.enabled-protocols=TLSv1.3,TLSv1.2,TLSv1.1
+server.ssl.key-alias=my_selfsigned
+server.ssl.key-store=/path/to/key-store-file
+server.ssl.key-password=pwd
+server.ssl.key-store-type=key-store-type
+server.ssl.ciphers=ciphers
 
 labkeyDataSource.dataSourceName[0]=jdbc/labkeyDataSource
 labkeyDataSource.driverClassName[0]=@@jdbcDriverClassName@@
