code review feedback round 2

--- a/gradle.properties
+++ b/gradle.properties
@@ -261,4 +261,4 @@ xmlbeansVersion=3.0.1
 springBootVersion=2.0.9.RELEASE
 
 # uncomment the following line for running the application with embedded tomcat
-useEmbeddedTomcat
+#useEmbeddedTomcat
