--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -8,15 +8,15 @@ server.ssl.enabled=true
 server.ssl.enabled-protocols=TLSv1.3,TLSv1.2,TLSv1.1
 server.ssl.key-alias=my_selfsigned
 server.ssl.key-store=/path/to/key-store-file
-server.ssl.key-password=pwd
+server.ssl.key-store-password=pwd
 server.ssl.key-store-type=key-store-type
 server.ssl.ciphers=ciphers
 
-labkeyDataSource.dataSourceName[0]=jdbc/labkeyDataSource
-labkeyDataSource.driverClassName[0]=@@jdbcDriverClassName@@
-labkeyDataSource.url[0]=@@jdbcURL@@
-labkeyDataSource.username[0]=@@jdbcUser@@
-labkeyDataSource.password[0]=@@jdbcPassword@@
+context.dataSourceName[0]=jdbc/labkeyDataSource
+context.driverClassName[0]=@@jdbcDriverClassName@@
+context.url[0]=@@jdbcURL@@
+context.username[0]=@@jdbcUser@@
+context.password[0]=@@jdbcPassword@@
 
 context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
 context.masterEncryptionKey=@@masterEncryptionKey@@
