correct devtools restart path

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -30,4 +30,4 @@ mail.smtpUser=@@smtpUser@@
 # mail.smtpSocketFactoryClass=@@smtpSocketFactoryClass@@
 # mail.smtpAuth=@@smtpAuth@@
 
-spring.devtools.restart.additional-paths=@@pathToServer@@/server/build/deploy/modules/**
+spring.devtools.restart.additional-paths=@@pathToServer@@/server/build/deploy/modules
