Rearrange properties a bit and comment out dev-specific properties by default

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -18,7 +18,7 @@ context.url[0]=@@jdbcURL@@
 context.username[0]=@@jdbcUser@@
 context.password[0]=@@jdbcPassword@@
 
-context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
+#context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
 context.masterEncryptionKey=@@masterEncryptionKey@@
 
 mail.smtpHost=@@smtpHost@@
@@ -30,4 +30,4 @@ mail.smtpUser=@@smtpUser@@
 # mail.smtpSocketFactoryClass=@@smtpSocketFactoryClass@@
 # mail.smtpAuth=@@smtpAuth@@
 
-spring.devtools.restart.additional-paths=@@pathToServer@@/server/build/deploy/modules
+#spring.devtools.restart.additional-paths=@@pathToServer@@/server/build/deploy/modules
