--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -1,16 +1,14 @@
-# server.port=8080
+server.port=@@serverPort@@
 
-## To switch to http, uncomment above server config and comment
-## below server config
+## To use ssl, update the properties below for your local installation
 
-server.port=8443
-server.ssl.enabled=true
-server.ssl.enabled-protocols=TLSv1.3,TLSv1.2,TLSv1.1
-server.ssl.key-alias=my_selfsigned
-server.ssl.key-store=/path/to/key-store-file
-server.ssl.key-store-password=pwd
-server.ssl.key-store-type=key-store-type
-server.ssl.ciphers=ciphers
+#server.ssl.enabled=true
+#server.ssl.enabled-protocols=TLSv1.3,TLSv1.2,TLSv1.1
+#server.ssl.key-alias=my_selfsigned
+#server.ssl.key-store=/path/to/key-store-file
+#server.ssl.key-store-password=pwd
+#server.ssl.key-store-type=key-store-type
+#server.ssl.ciphers=ciphers
 
 context.dataSourceName[0]=jdbc/labkeyDataSource
 context.driverClassName[0]=@@jdbcDriverClassName@@
@@ -31,3 +29,13 @@ mail.smtpUser=@@smtpUser@@
 # mail.smtpAuth=@@smtpAuth@@
 
 #spring.devtools.restart.additional-paths=@@pathToServer@@/server/build/deploy/modules
+
+#Enable shutdown endpoint
+management.endpoint.shutdown.enabled=true
+# allow access via http
+management.endpoints.web.exposure.include=*
+# Don't require password (for now)
+management.security.enabled=false
+
+# Don't show the Spring banner on startup
+spring.main.banner-mode=off
