Add new property for enabling SSL in embedded Tomcat server configuration

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,9 @@ versionConflictAction=delete
 # uncomment the following line when using a local build of a server with embedded tomcat
 #useLocalBuild
 
+# uncomment the following line when using SLL for your embedded tomcat server
+#useSsl
+
 # the URL for the artifact repository where our build plugins are housed
 # as well as the build artifacts. (Be careful not to include a trailing slash 
 # in the context URL or you will get a 500 error from artifactory.)
