--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -28,7 +28,7 @@ mail.smtpUser=@@smtpUser@@
 # mail.smtpSocketFactoryClass=@@smtpSocketFactoryClass@@
 # mail.smtpAuth=@@smtpAuth@@
 
-#spring.devtools.restart.additional-paths=@@pathToServer@@/server/build/deploy/modules
+#spring.devtools.restart.additional-paths=@@pathToServer@@/build/deploy/modules
 
 #Enable shutdown endpoint
 management.endpoint.shutdown.enabled=true
