Add TODO for separate management port

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -32,10 +32,15 @@ mail.smtpUser=@@smtpUser@@
 
 #Enable shutdown endpoint
 management.endpoint.shutdown.enabled=true
+# turn off other endpoints
+management.endpoints.enabled-by-default=false
 # allow access via http
 management.endpoints.web.exposure.include=*
-# Don't require password (for now)
-management.security.enabled=false
+# TODO use a separate port for the actuator.  This requires changes to the LabKeyServer class.
+# The following error is produced:
+#   Exception encountered during context initialization - cancelling refresh attempt: org.springframework.beans.FatalBeanException: ServletWebServerFactory implementation org.labkey.embedded.LabKeyServer$1 cannot be instantiated.
+#   To allow a separate management port to be used, a top-level class or static inner class should be used instead
+#management.server.port=8081
 
 # Don't show the Spring banner on startup
 spring.main.banner-mode=off
