--- a/gradle.properties
+++ b/gradle.properties
@@ -26,7 +26,7 @@ versionConflictAction=delete
 # uncomment the following line when using a local build of a server with embedded tomcat
 #useLocalBuild
 
-# uncomment the following line when using SLL for your embedded tomcat server
+# uncomment the following line when using SSL for your embedded tomcat server
 #useSsl
 
 # the URL for the artifact repository where our build plugins are housed
