Item 8021 : Introduction of Spring boot with Embedded Tomcat (#21)

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,15 @@ org.gradle.jvmargs=-Xmx2048m
 # The value 'delete' will cause the conflicting version(s) in the build directory to be removed.
 versionConflictAction=delete
 
+# uncomment the following line for running the application with embedded tomcat
+#useEmbeddedTomcat
+
+# uncomment the following line when using a local build of a server with embedded tomcat
+#useLocalBuild
+
+# uncomment the following line when using SSL for your embedded tomcat server
+#useSsl
+
 # the URL for the artifact repository where our build plugins are housed
 # as well as the build artifacts. (Be careful not to include a trailing slash 
 # in the context URL or you will get a 500 error from artifactory.)
@@ -50,7 +59,7 @@ windowsProteomicsBinariesVersion=1.0
 bintrayPluginVersion=1.8.4
 artifactoryPluginVersion=4.13.0
 gradleNodePluginVersion=2.2.4
-gradlePluginsVersion=1.22.0
+gradlePluginsVersion=1.23.0
 owaspDependencyCheckPluginVersion=5.2.1
 versioningPluginVersion=1.1.0
 
@@ -231,7 +240,10 @@ servletApiVersion=3.0
 # this version is forced for compatibility with pipeline and tika
 slf4jLog4j12Version=1.7.5
 # this version is forced for compatibility with api, LDK, and workflow
-slf4jLog4jApiVersion=1.7.16
+slf4jLog4jApiVersion=1.7.30
+
+
+springBootVersion=2.0.9.RELEASE
 
 # N.B. Spring version 5+ brings in a change to form handling such that GET and POST parameters are both used when
 # posting a form. For some of our forms this causes heartache.
