Use a more human-readable pattern for extra jdbc configuration template

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -16,11 +16,11 @@ context.url[0]=@@jdbcURL@@
 context.username[0]=@@jdbcUser@@
 context.password[0]=@@jdbcPassword@@
 
-#@@extraJdbcDataSource@@.context.dataSourceName[1]=jdbc/@@extraJdbcDataSource@@
-#@@extraJdbcDataSource@@.context.driverClassName[1]=@@extraJdbcDriverClassName@@
-#@@extraJdbcDataSource@@.context.url[1]=@@extraJdbcURL@@
-#@@extraJdbcDataSource@@.context.username[1]=@@extraJdbcUser@@
-#@@extraJdbcDataSource@@.context.password[1]=@@extraJdbcPassword@@
+#context.dataSourceName[1]=jdbc/@@extraJdbcDataSource@@
+#context.driverClassName[1]=@@extraJdbcDriverClassName@@
+#context.url[1]=@@extraJdbcURL@@
+#context.username[1]=@@extraJdbcUser@@
+#context.password[1]=@@extraJdbcPassword@@
 
 #context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
 context.masterEncryptionKey=@@masterEncryptionKey@@
