--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -16,6 +16,12 @@ context.url[0]=@@jdbcURL@@
 context.username[0]=@@jdbcUser@@
 context.password[0]=@@jdbcPassword@@
 
+#context.dataSourceName[1]=jdbc/@@extraJdbcDataSource@@
+#context.driverClassName[1]=@@extraJdbcDriverClassName@@
+#context.url[1]=@@extraJdbcURL@@
+#context.username[1]=@@extraJdbcUser@@
+#context.password[1]=@@extraJdbcPassword@@
+
 #context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
 context.masterEncryptionKey=@@masterEncryptionKey@@
 
