Keep building the core server with 8.5.x, but use 9.0.x within the Embedded code

--- a/gradle.properties
+++ b/gradle.properties
@@ -92,7 +92,7 @@ activationVersion=1.2.1
 
 annotationsVersion=15.0
 
-apacheTomcatVersion=9.0.34
+apacheTomcatVersion=8.5.51
 
 #Unifying version used by DISCVR and Premium
 apacheDirectoryVersion=1.0.3
@@ -243,6 +243,8 @@ slf4jLog4jApiVersion=1.7.30
 
 
 springBootVersion=2.2.13.RELEASE
+# Keep building the core server with 8.5.x, but use 9.0.x within the Embedded code until support for 8.5.x is dropped
+springBootTomcatVersion=9.0.34
 
 # N.B. Spring version 5+ brings in a change to form handling such that GET and POST parameters are both used when
 # posting a form. For some of our forms this causes heartache.
