Support to run embedded tomcat with java 16 (#38)

--- a/gradle.properties
+++ b/gradle.properties
@@ -242,7 +242,9 @@ slf4jLog4j12Version=1.7.5
 slf4jLog4jApiVersion=1.7.30
 
 
-springBootVersion=2.0.9.RELEASE
+springBootVersion=2.2.13.RELEASE
+# Keep building the core server with 8.5.x, but use 9.0.x within the Embedded code until support for 8.5.x is dropped
+springBootTomcatVersion=9.0.34
 
 # N.B. Spring version 5+ brings in a change to form handling such that GET and POST parameters are both used when
 # posting a form. For some of our forms this causes heartache.
