--- a/build.gradle
+++ b/build.gradle
@@ -144,7 +144,7 @@ allprojects {
                         }
                     }
                 }
-                jcenter()
+                mavenCentral()
             }
     configurations.all
             {
