Issue 42486: Allow serverGUID to be set as a spring boot "context." property

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -24,6 +24,7 @@ context.password[0]=@@jdbcPassword@@
 
 #context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
 context.masterEncryptionKey=@@masterEncryptionKey@@
+#context.serverGUID=
 
 mail.smtpHost=@@smtpHost@@
 mail.smtpPort=@@smtpPort@@
