--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 # Uncomment the following line to turn on Gradle's file watching, which may improve efficiency
 # https://blog.gradle.org/introducing-file-system-watching
 #org.gradle.vfs.watch=true
-# Uncomment the following line to turn on Gradle's build cache, which will improve efficiency
+# This controls Gradle's build cache, which improves efficiency.
 # https://docs.gradle.org/current/userguide/build_cache.html
 org.gradle.caching=true
 # comment out or use --no-parallel to turn off parallel execution
