--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@
 # Uncomment the following line to turn on Gradle's file watching, which may improve efficiency
 # https://blog.gradle.org/introducing-file-system-watching
 #org.gradle.vfs.watch=true
-# Uncomment the following line to turn on Gradle's build cache, which will improve efficiency
+# This controls Gradle's build cache, which improves efficiency.
 # https://docs.gradle.org/current/userguide/build_cache.html
-#org.gradle.caching=true
+org.gradle.caching=true
 # comment out or use --no-parallel to turn off parallel execution
 org.gradle.parallel=true
 # comment out and Gradle will attempt to determine the optimal number of executor threads to use
@@ -55,10 +55,9 @@ osxProteomicsBinariesVersion=1.0
 windowsProteomicsBinariesVersion=1.0
 
 # The current version numbers for the gradle plugins.
-bintrayPluginVersion=1.8.4
-artifactoryPluginVersion=4.13.0
-gradleNodePluginVersion=2.2.4
-gradlePluginsVersion=1.25.1
+artifactoryPluginVersion=4.21.0
+gradleNodePluginVersion=3.0.1
+gradlePluginsVersion=1.26.0
 owaspDependencyCheckPluginVersion=5.2.1
 versioningPluginVersion=1.1.0
 
@@ -125,9 +124,9 @@ commonsDbcpVersion=1.4
 commonsDiscoveryVersion=0.2
 commonsDigesterVersion=1.8.1
 commonsFileuploadVersion=1.3.1
-commonsIoVersion=2.6
+commonsIoVersion=2.8.0
 commonsLangVersion=2.6
-commonsLang3Version=3.8
+commonsLang3Version=3.12.0
 commonsLoggingVersion=1.2
 commonsMath3Version=3.6.1
 commonsNetVersion=3.5
@@ -167,8 +166,8 @@ hamcrestCoreVersion=1.3
 # It is also necessary to update SequenceAnalysisManager.htsjdkVersion
 htsjdkVersion=2.21.3
 
-httpclientVersion=4.5.3
-httpcoreVersion=4.4.6
+httpclientVersion=4.5.13
+httpcoreVersion=4.4.14
 httpmimeVersion=4.5.3
 
 jacksonVersion=2.9.5
