--- a/settings.gradle
+++ b/settings.gradle
@@ -65,6 +65,8 @@ buildscript {
     }
 }
 
+rootProject.name="labkey-server"
+
 apply from: 'gradle/settings/parameters.gradle'
 
 import org.labkey.gradle.util.BuildUtils
