Add templates for some IntelliJ config files, a task to install these, and an updated gitIgnore file (#66)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore user-providde files
+.envrc
+
 # Ignore build generated files
 .gradle/
 .node/
@@ -27,3 +30,14 @@ server/testAutomation/
 .idea/jarRepositories.xml
 .idea/modules.xml
 .idea/workspace.xml
+.idea/dataSources.xml
+.idea/dataSources.local.xml
+# Files installed from templates
+.idea/runConfigurations/LabKey_Dev.xml
+.idea/runConfigurations/LabKey_Production.xml
+.idea/runConfigurations/LabKeyEmbedded_Dev.xml
+.idea/gradle.xml
+.idea/compiler.xml
+.idea/misc.xml
+.idea/vcs.xml
+.idea/sqldialects.xml
