--- a/gradle.properties
+++ b/gradle.properties
@@ -46,7 +46,7 @@ buildFromSource=true
 # The default version for LabKey artifacts that are built or that we depend on.
 # override in an individual module's gradle.properties file as necessary 
 labkeyVersion=21.6-SNAPSHOT
-labkeyClientApiVersion=1.4.0-gradle7-SNAPSHOT
+labkeyClientApiVersion=1.3.2
 # Version numbers for the various binary artifacts that are included when
 # deploying via deployApp or deployDist and when creating distributions.
 windowsUtilsVersion=1.0
@@ -168,7 +168,7 @@ htsjdkVersion=2.21.3
 
 httpclientVersion=4.5.13
 httpcoreVersion=4.4.14
-httpmimeVersion=4.5.13
+httpmimeVersion=4.5.3
 
 jacksonVersion=2.9.5
 jacksonAnnotationsVersion=2.9.5
