--- a/gradle.properties
+++ b/gradle.properties
@@ -46,7 +46,7 @@ buildFromSource=true
 # The default version for LabKey artifacts that are built or that we depend on.
 # override in an individual module's gradle.properties file as necessary 
 labkeyVersion=21.7-SNAPSHOT
-labkeyClientApiVersion=1.3.2
+labkeyClientApiVersion=1.4.0-versionUpdates217-SNAPSHOT
 # Version numbers for the various binary artifacts that are included when
 # deploying via deployApp or deployDist and when creating distributions.
 windowsUtilsVersion=1.0
@@ -57,7 +57,7 @@ windowsProteomicsBinariesVersion=1.0
 # The current version numbers for the gradle plugins.
 artifactoryPluginVersion=4.21.0
 gradleNodePluginVersion=3.0.1
-gradlePluginsVersion=1.26.0
+gradlePluginsVersion=1.28.0-versionUpdates217-SNAPSHOT
 owaspDependencyCheckPluginVersion=5.2.1
 versioningPluginVersion=1.1.0
 
@@ -110,26 +110,26 @@ bouncycastleVersion=1.60
 
 cglibNodepVersion=2.2.3
 
-commonsCollectionsVersion=3.2.2
-commonsCollections4Version=4.2
-commonsCodecVersion=1.10
 # the beanutils version is not the default version brought from commons-validator and/or commons-digester
 # in the :server:api module but is required for some of our code to compile
-commonsBeanutilsVersion=1.7.0
+commonsBeanutilsVersion=1.8.3
+commonsCollectionsVersion=3.2.2
+commonsCollections4Version=4.4
+commonsCodecVersion=1.15
 # sync with version Tika ships
 commonsCompressVersion=1.20
 commonsDbcpVersion=1.4
 commonsDiscoveryVersion=0.2
 commonsDigesterVersion=1.8.1
-commonsFileuploadVersion=1.3.1
+commonsFileuploadVersion=1.4
 commonsIoVersion=2.8.0
 commonsLangVersion=2.6
 commonsLang3Version=3.12.0
 commonsLoggingVersion=1.2
 commonsMath3Version=3.6.1
-commonsNetVersion=3.5
+commonsNetVersion=3.8.0
 commonsPoolVersion=1.6
-commonsValidatorVersion=1.5.0
+commonsValidatorVersion=1.7
 
 dom4jVersion=1.6.1
 
@@ -166,7 +166,7 @@ htsjdkVersion=2.21.3
 
 httpclientVersion=4.5.13
 httpcoreVersion=4.4.14
-httpmimeVersion=4.5.3
+httpmimeVersion=4.5.13
 
 jacksonVersion=2.9.5
 jacksonAnnotationsVersion=2.9.5
