--- a/gradle.properties
+++ b/gradle.properties
@@ -158,7 +158,7 @@ gwtServletVersion=2.8.2
 # For dev builds, the targeted, single permutation browser. Can be either gwt-user-firefox, gwt-user-chrome, or gwt-user-ie
 gwtBrowser=gwt-user-chrome
 
-hamcrestCoreVersion=1.3
+hamcrestVersion=1.3
 
 # Note: if changing this, we might need to match with the picard version in the SequenceAnalysis module build.gradle
 # It is also necessary to update SequenceAnalysisManager.htsjdkVersion
@@ -195,7 +195,7 @@ jtdsVersion=1.3.1
 
 jtidyVersion=r918
 
-junitVersion=4.12
+junitVersion=4.13.2
 
 jxlVersion=2.6.3
 
